Fix vertical align of select leader button

--- a/src/app/team-builder/pages/gp-team-builder/gp-team-builder.component.css
+++ b/src/app/team-builder/pages/gp-team-builder/gp-team-builder.component.css
@@ -51,6 +51,6 @@
   vertical-align: middle;
 }
 
-mat-icon.mat-icon.notranslate.material-icons.mat-icon-no-color {
+.team-header mat-icon.mat-icon.notranslate.material-icons.mat-icon-no-color {
   vertical-align: sub;
 }
